Coverity analysis defect 184136: Operands don't affect result

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Operands don't affect result

      The expression's value does not depend on the operands; often, this represents an inadvertent logic error. An operation with non-constant operands that computes a result with constant value
      /data/mci/b673a78b625a4b3a15632f024ff3485c/bazel_cache/1f0fda58881c2b7283532a6cb043a2ab/execroot/_main/src/mongo/db/query/util/retry.h:45: CONSTANT_EXPRESSION_RESULT 184136 "attempt <= maxNumRetries" is always true regardless of the values of its operands. This occurs as the logical operand of "for".

            Assignee:
            Lynne Wang
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: