SERVER-116190 Fix coverity error in query retry util - Operands don't affect result (#46053)

GitOrigin-RevId: 9f1c14a24a3b07e0ac97b6a6bc307d3fdc18bf07